--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@
 
 fastapi>=0.104.1,<1.0.0
 uvicorn[standard]>=0.24.0
+gunicorn>=21.2.0
 pandas>=2.1.3
 numpy>=1.25.2
 matplotlib>=3.8.2
@@ -18,4 +19,5 @@ google-generativeai>=0.3.2
 psutil>=5.9.6
 tenacity>=8.2.3
 html5lib>=1.1
+
 
